--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
@@ -57,5 +57,16 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,css,md}": "yarn prettier:check"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
