--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
