--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^8.3.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "mui-file-dropzone": "^4.0.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
